--- a/src/resources/styles/pages/home.less
+++ b/src/resources/styles/pages/home.less
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
@@ -8,7 +10,11 @@
 }
 
 .App-header {
-  background-color: #222;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #555555;
   height: 150px;
   padding: 20px;
   color: white;
